discussion/kv_engine/152923/152923_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

toybuild: test set time after removing logger

Change-Id: I9c03edeead5d5f892ac632c3fb933168c35a7b87

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2021-06-13 11:07:58.000000000
Message: 
Patch Set 2: Patch Set 1 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-13 11:39:28.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9828/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9828/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9828/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11824/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11824/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19411/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0103/0157]: test multiple vb compactions with workload...Exceeded maximum wait time of 60000000us waiting for stat "ep_workload_pattern" to be read_heavy (last value:write_heavy) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19411/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19411/ )

Test exceeded the timeout:
[2021-06-13T11:28:23.900Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19411/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8416/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36812/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/339/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31451/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10478/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11398/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11549/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-13 13:13:42.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9829/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9829/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9829/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11825/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8417/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36813/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/340/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31452/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10479/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11399/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19412/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11550/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-13 17:40:21.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9830/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9830/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9830/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11826/ : FAILURE

ThreadSanitizer issue: data race ../magma/lsm/memtable/arena.h:101 in magma::Arena::Block::Alloc(unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11826/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36814/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0102/0157]: test multiple vb compactions...WARNING: Logging before InitGoogleLogging() is written to STDERR
W0613 10:30:54.445904 36712 HazptrDomain.h:671] Using the default inline executor for asynchronous reclamation may be susceptible to deadlock if the current thread happens to hold a resource needed by the deleter of a reclaimable object


99% tests passed, 2 tests failed out of 407

Total Test time (real) = 669.50 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36814/ )

Timeout of a CTest test 406/407 Test #249: ep_testsuite.value_eviction.comp_passive ......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36814/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10480/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10480/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11551/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0103/0157]: test multiple vb compactions with workload...WARNING: Logging before InitGoogleLogging() is written to STDERR
[2021-06-13T17:22:04.889Z] W0613 17:20:50.194640  6135 HazptrDomain.h:671] Using the default inline executor for asynchronous reclamation may be susceptible to deadlock if the current thread happens to hold a resource needed by the deleter of a reclaimable object
[2021-06-13T17:22:04.889Z] Exceeded maximum wait time of 60000000us waiting for stat "ep_workload_pattern" to be read_heavy (last value:write_heavy) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11551/ )

Failure of GoogleTest "TransportProtocols/BucketTest.TestBucketIsolationAndMaxBuckets/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/BucketTest.TestBucketIsolationAndMaxBuckets/McbpSsl
[2021-06-13T17:19:16.484Z] WARNING: Logging before InitGoogleLogging() is written to STDERR
[2021-06-13T17:19:16.484Z] W0613 17:18:30.070325 99478 HazptrDomain.h:671] Using the default inline executor for asynchronous reclamation may be susceptible to deadlock if the current thread happens to hold a resource needed by the deleter of a reclaimable object
[2021-06-13T17:19:16.484Z] unknown file: Failure
[2021-06-13T17:19:16.484Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 20000ms for a response for DELETE_BUCKET" thrown in the test body.
[2021-06-13T17:19:16.484Z] [  FAILED  ] TransportProtocols/BucketTest.TestBucketIsolationAndMaxBuckets/McbpSsl, where GetParam() = McbpSsl (24177 ms)
TransportProtocols/BucketTest.TestBucketIsolationAndMaxBuckets/McbpSsl
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11551/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11551/ )

Test exceeded the timeout:
[2021-06-13T17:22:04.889Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11551/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8418/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/341/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31453/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11400/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19413/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
